--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "6.10.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.0"
   },
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@testing-library/dom": "^7.21.4",
