--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-syntax-flow": "^7.24.7",
     "@babel/plugin-transform-react-jsx": "^7.25.2",
     "@testing-library/dom": "^10.4.0",
+    "@types/jest": "^29.5.12",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
